# doraemon-monopoly-localization

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: release-language.yml
archive/: EXECUTABLE_FONT_RESEARCH.md  EXECUTABLE_PORTABILITY_RESEARCH.md  REVERSE_ENGINEERING_JOURNAL.md  VOICE_DAT_RESEARCH.md
docs/: file-formats.md  reverse-engineering-journal.md
docs/sprite-localization-catalog/: README.md  sprite-index.csv
glyph-viewer/: README.md  package.json  tsconfig.json
glyph-viewer/scripts/: generate-font.ts  generate-sysfont-metrics.ts  translate-server.ts
glyph-viewer/src/: App.svelte  AssetCanvas.svelte  Router.svelte  app.css  main.ts
native/doraudio/: doraudio.c  doraudio_codec.c  doraudio_stream.c
patches/: english.dmpatch  vietnamese.dmpatch
patches/english/: english.dmpatch  loc-doraemon.dmpatch  loc-dorami.dmpatch  loc-gian.dmpatch  loc-nobita.dmpatch  loc-others.dmpatch  loc-shizuka.dmpatch  loc-suneo.dmpatch  sprites.dmpatch
patches/vietnamese/: loc-doraemon.dmpatch  loc-dorami.dmpatch  loc-gian.dmpatch  loc-nobita.dmpatch  loc-others.dmpatch  loc-shizuka.dmpatch  loc-suneo.dmpatch  sprites.dmpatch  vietnamese.dmpatch
resource-studio/: .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  package.json  vite.config.ts
resource-studio/docs/: map-dat-format.md
resource-studio/scripts/: bitmap-text.js  build-vietnamese-sysfont.ts  generate-sysfont-metrics.ts  patch-vietnamese-exe.test.ts  stage-game.ts  (+6 more)
rust/patcher/: Cargo.toml  build.rs
rust/patcher/src/: main.rs
(+74 files in other folders)
