[package]
name = "doraemon-patcher"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
doraemon-game-patch = { path = "../game-patch" }

[target.'cfg(windows)'.dependencies]
native-windows-gui = "1.0.13"
unicode-segmentation = "=1.12.0"
